--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
+    "@types/jsonwebtoken": "^7.2.8",
     "core-js": "^2.4.1",
+    "jsonwebtoken": "^8.3.0",
     "rxjs": "^5.4.2",
     "uikit": "^3.0.0-rc.16",
     "zone.js": "^0.8.14"
