--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
     "@types/jsonwebtoken": "^7.2.8",
+    "angular5-social-login": "^1.0.9",
     "core-js": "^2.4.1",
     "jsonwebtoken": "^8.3.0",
     "rxjs": "^5.4.2",
